Fix alignment of 2018 homepage hero title

--- a/src/sass/partials/2018/hero.scss
+++ b/src/sass/partials/2018/hero.scss
@@ -20,6 +20,7 @@
 		white-space: nowrap;
         height: 300px;
         line-height: 300px;
+		width: 100%;
     }
 	
 	.subtitle {
